Correct QtBase path

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ matrix:
     - os: osx
       env: 
         - OUTPUT_ZIP_FILE=QtTools-5.13.1_mac.zip
-        - QT_FILE=Qt-5.13.1_mac.zip
+        - QT_FILE=Qtbase-5.13.1_mac.zip
     - os: windows
       env: 
         - OUTPUT_ZIP_FILE=QtTools-5.13.1_win.zip
-        - QT_FILE=Qt-5.13.1_win.zip
+        - QT_FILE=Qtbase-5.13.1_win.zip
 compiler:
   - gcc
 
