Do we need winflexbison?

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then cd /Users/travis/build; fi
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then cd /c/Users/travis/build; fi
   - curl -L https://github.com/ChristianFeldmann/YUViewQt/releases/download/QtBase-5.13.1/${QT_FILE} -o Qt.zip
-  - unzip -a Qt.zip
+  - unzip -q -a Qt.zip
   # Get QtTools
   - cd $TRAVIS_BUILD_DIR
   - curl -L https://github.com/qt/qttools/archive/v5.13.1.zip -o Qttools.zip
@@ -25,8 +25,9 @@ install:
   - mv qttools-5.13.1 Qttools
   - |
     if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
-      choco install winflexbison3
       choco install VisualCppBuildTools
+      choco install strawberryperl
+      export PATH=$PATH:";C:\Strawberry\perl\bin"
       # We have to remove this perl executable because it clashes with strawberry perl.
       # Strawberry perl is needed because the perl version that comes with git is too old to compile Qt
       rm 'C:\Program Files\Git\usr\bin\perl.exe'
