--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ compiler:
   - gcc
 
 install:
-  # Get the precompiled Qt libraries to the folder that they were installed in (/Users/travis/build/Qt)
+  # Get the precompiled Qt libraries to the folder that they were installed in
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then cd /Users/travis/build; fi
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then cd /c/Users/travis/build; fi
   - curl -L https://github.com/ChristianFeldmann/YUViewQt/releases/download/QtBase-5.13.1/${QT_FILE} -o Qt.zip
@@ -37,7 +37,6 @@ script:
       cd Qttools/src/macdeployqt
       /Users/travis/build/Qt/bin/qmake
       make -j 2
-      make install
     fi
   - |
     if [ "$TRAVIS_OS_NAME" = "windows" ]; then 
