Install required dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,14 @@ install:
       unset CXX
       unset CXX_FOR_BUILD
     fi
+  - |
+    if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+      sudo cp /etc/apt/sources.list /etc/apt/sources.list~
+      sudo sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list
+      sudo apt-get update
+      sudo apt-get build-dep qt5-default
+      sudo apt-get install libxcb-xinerama0-dev
+    fi
 
 script:
   # Build QtBase and install
