--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ matrix:
         - OUTPUT_ZIP_FILE=Qtbase-5.13.1_win.zip
         - OPEN_SSL_FILE=openSSL_1_1_1_stable_win.zip
     - os: linux
-      dist: trusty
+      dist: xenial
       env:
-        - OUTPUT_ZIP_FILE=Qtbase-5.13.1_ubuntu_trusty.zip
-        - OPEN_SSL_FILE=openSSL_1_1_1_stable_ubuntu_trusty.zip
+        - OUTPUT_ZIP_FILE=Qtbase-5.13.1_ubuntu_xenial.zip
+        - OPEN_SSL_FILE=openSSL_1_1_1_stable_ubuntu_xenial.zip
         - QT_INSTALL_DIR=/home/travis/build/Qt
 compiler:
   - gcc
