--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ matrix:
   - os: linux
     dist: trusty
     env: OUTPUT_ZIP_FILE=openSSL_1_1_1_stable_ubuntu_trusty.zip
+  - os: linux
+    dist: xenial
+    env: OUTPUT_ZIP_FILE=openSSL_1_1_1_stable_ubuntu_xenial.zip
 
 compiler:
   - gcc
