--- a/.github/workflows/openssl.yml
+++ b/.github/workflows/openssl.yml
@@ -40,6 +40,7 @@ jobs:
       if: matrix.os == 'windows-2019'
     - name: Build Windows
       run: |
+        set PATH=%PATH%;";C:\Program Files\NASM"
         cd openSSL
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         C:\Strawberry\perl\bin\perl.exe Configure VC-WIN64A
