--- a/.github/workflows/openssl.yml
+++ b/.github/workflows/openssl.yml
@@ -27,7 +27,7 @@ jobs:
         mv openssl-OpenSSL_1_1_1-stable openSSL
     - name: Install windows dependencies
       run: |
-        choco install nasm -v
+        choco install nasm
         set PATH=%PATH%;"C:\Program Files\NASM"
         nasm --version
         choco install strawberryperl
