Set path correclty

--- a/.github/workflows/openssl.yml
+++ b/.github/workflows/openssl.yml
@@ -42,10 +42,8 @@ jobs:
       run: |
         cd openSSL
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-        set PATH=%PATH%;";C:\Program Files\NASM"
-        nasm --version
+        set PATH=%PATH%;"C:\Program Files\NASM"
         C:\Strawberry\perl\bin\perl.exe Configure VC-WIN64A
-        nasm --version
         nmake
       shell: cmd
       if: matrix.os == 'windows-2019'
