--- a/.github/workflows/openssl.yml
+++ b/.github/workflows/openssl.yml
@@ -43,15 +43,15 @@ jobs:
         cd openSSL
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         set PATH=%PATH%;"C:\Program Files\NASM"
-        C:\Strawberry\perl\bin\perl.exe Configure --prefix=$PWD/dist VC-WIN64A
+        C:\Strawberry\perl\bin\perl.exe Configure --prefix=$HOME\openSSL\dist VC-WIN64A
         nmake
         cd ..
         mkdir artifact
         robocopy openSSL\include artifact\include /e
-        copy openSSL/libcrypto-1_1-x64.dll artifact
-        copy openSSL/libcrypto.lib artifact
-        copy openSSL/libssl-1_1-x64.dll artifact
-        copy openSSL/libssl.lib artifact
+        copy openSSL\libcrypto-1_1-x64.dll artifact
+        copy openSSL\libcrypto.lib artifact
+        copy openSSL\libssl-1_1-x64.dll artifact
+        copy openSSL\libssl.lib artifact
       shell: cmd
       if: matrix.os == 'windows-2019'
     - name: Build Mac
